--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Mux</title>
-  <base href="/">
+  <base href="/muxvideojs">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.fe7c2050ed5cb70e.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.fe7c2050ed5cb70e.css"></noscript></head>
